--- a/CoreData1010/CoreData1010/Base.lproj/Main.storyboard
+++ b/CoreData1010/CoreData1010/Base.lproj/Main.storyboard
@@ -32,7 +32,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="bZa-xa-suU"/>
                     <connections>
-                        <outlet property="tableView" destination="amU-rH-exR" id="l66-Kd-Cbh"/>
                         <segue destination="o7g-Gj-Q7f" kind="show" identifier="toDetail" id="CzY-uA-Gnr"/>
                     </connections>
                 </viewController>
@@ -48,30 +47,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4K0-Sp-Lae">
-                                <rect key="frame" x="74" y="136" width="230" height="289"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="select.png" translatesAutoresizingMaskIntoConstraints="NO" id="4K0-Sp-Lae">
+                                <rect key="frame" x="74" y="136" width="264" height="289"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="289" id="40Q-aj-wzM"/>
                                     <constraint firstAttribute="width" constant="244" id="UMY-OW-VQ6"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Oqv-9E-A6D">
-                                <rect key="frame" x="81" y="474" width="223" height="34"/>
+                                <rect key="frame" x="81" y="474" width="257" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Artist" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zrq-iL-IFi">
-                                <rect key="frame" x="81" y="544" width="223" height="34"/>
+                                <rect key="frame" x="81" y="544" width="257" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Year" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fBS-58-V1V">
-                                <rect key="frame" x="81" y="609" width="223" height="34"/>
+                                <rect key="frame" x="81" y="609" width="257" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yz1-SY-j9K">
-                                <rect key="frame" x="162" y="686" width="61" height="35"/>
+                                <rect key="frame" x="162" y="686" width="95" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="Save"/>
                                 <connections>
@@ -132,6 +131,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="select.png" width="264" height="300"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
